# goit-python-ds-project

./: .gitignore  README.md  model_albert.ipynb  pyproject.toml  requirements.txt  toxic.ipynb  toxic_albert_model.ipynb  toxic_albert_model_1.ipynb  toxic_albert_model_and_test.ipynb  toxic_albert_model_and_test_1.ipynb  toxic_albert_model_test_1.ipynb  toxic_albert_model_test_2.ipynb  toxic_albert_model_test_2_2.ipynb  toxic_bert_model.ipynb  toxic_bert_model_1.ipynb  toxic_dataset_cleaning_alex.ipynb
