[tool.poetry]
name = "goit-python-ds-project"
version = "0.1.0"
description = ""
authors = ["Alex Khreptak <alex.nuclearboy@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.2.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
