[tool.poetry]
name = "goit-python-ds-project"
version = "0.1.0"
description = ""
authors = ["Alex Khreptak <alex.nuclearboy@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.2.2"
pandas = "^2.2.3"
transformers = "^4.45.2"
nltk = "^3.9.1"
spacy = "^3.8.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
